--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,20 +19,22 @@ classifiers = [
 ]
 requires-python = ">=3.11.8"
 dependencies = [
-    "filelock=3.13.1",
-    "fsspec=2024.2.0",
-    "Jinja2=3.1.3",
-    "MarkupSafe=2.1.5",
-    "mpmath=1.3.0",
-    "networkx=3.2.1",
-    "numpy=1.26.3",
-    "pillow=10.2.0",
-    "sympy=1.13.1",
-    "torch=2.5.1+cu121",
-    "torchaudio=2.5.1+cu121",
-    "torchvision=0.20.1+cu121",
-    "typing_extensions=4.9.0"
-
+  "colorama=0.4.6",
+  "filelock=3.13.1",
+  "fsspec=2024.2.0",
+  "Jinja2=3.1.3",
+  "MarkupSafe=2.1.5",
+  "mpmath=1.3.0",
+  "networkx=3.2.1",
+  "numpy=1.26.3",
+  "pillow=10.2.0",
+  "PyYAML=6.0.2",
+  "sympy=1.13.1",
+  "torch=2.5.1+cu121",
+  "torchaudio=2.5.1+cu121",
+  "torchvision=0.20.1+cu121",
+  "tqdm=4.67.1",
+  "typing_extensions=4.9.0"
 ]
 
 
