--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "mpmath=1.3.0",
   "networkx=3.2.1",
   "numpy=1.26.3",
+  "opencv-python=4.10.0.84",
   "pillow=10.2.0",
   "PyYAML=6.0.2",
   "sympy=1.13.1",
